Cleaned code: added additional soft-tabs to make code easier to read

--- a/html/Contact.html
+++ b/html/Contact.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>My first styled page</title>
-  <link rel="stylesheet" href="style2.css">
+  <head>
+    <title>My first styled page</title>
+    <link rel="stylesheet" href="style2.css">
 
-</head>
+  </head>
 
-<body>
+  <body>
 
 <!-- Site navigation menu -->
-<ul class="navbar">
-  <li><a href="index2.html">Home page</a>
-  <li><a href="respics.html">Hiking pictures</a>
-  <li><a href="Pubs2.html">Publications</a>
-  <li><a href="Contact.html">Contact</a>
-</ul>
+    <ul class="navbar">
+      <li><a href="index2.html">Home page</a>
+      <li><a href="respics.html">Hiking pictures</a>
+      <li><a href="Pubs2.html">Publications</a>
+      <li><a href="Contact.html">Contact</a>
+    </ul>
 
 <!-- Main content -->
-  <h1>Contact information</h1>
-  <style type="text/css">
-  
-  </style>
+    <h1>Contact information</h1>
+    <style type="text/css">
 
-  
-  <p> email: <strong>tiffanyduhl@hotmail.com</strong>
+    </style>
 
  
   <p><!-- Facebook Badge START --><a href="https://www.facebook.com/tiffany.duhl" target="_TOP"     style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size:     11px; font-variant: normal; font-style: normal; font-weight: normal; color: #3B5998; text-    decoration: none;" title="Tiffany Rae Duhl">Tiffany Rae Duhl</a><br/><a     href="https://www.facebook.com/tiffany.duhl" target="_TOP" title="Tiffany Rae Duhl"><img     src="https://badge.facebook.com/badge/1752302378.1688.68873772.png" style="border: 0px;"     /><!-- Facebook Badge END -->
 
+    <p> email: <strong>tiffanyduhl@hotmail.com</strong>
 
-</body>
+
+    <p><!-- Facebook Badge START --><a href="https://www.facebook.com/tiffany.duhl" target="_TOP" title="Tiffany Rae Duhl"><img src="FBicon.png" style="border: 0px;" width="80" height="80" /a><!-- Facebook Badge END -->
+
+    <address>Created 21 October 2013</address>
+
+  </body>
 </html>
