Re-worded address

--- a/html/Pubs2.html
+++ b/html/Pubs2.html
@@ -46,8 +46,7 @@
 </div>
 
 
-<address>Created 21 October 2013<br>
-  by myself.</address>
+    <address>Created 21 October 2013</address>
 
 </body>
 </html>
