cleaned up code by adding soft tabs to enhance readability

--- a/html/index2.html
+++ b/html/index2.html
@@ -24,7 +24,7 @@
 
 <p>I'm a gardener, atmospheric scientist, and world traveler who's learning to build websites
 
-<p>To the left, you'll find links to my peer-reviewed <strong>publications</strong>, <strong>hiking pictures</strong>, and <strong>contact</strong> information.&hellip;
+    <p>To the left, you'll find links to my <strong>publications</strong>, <strong>hiking pictures</strong>, and <strong>contact</strong> information.;
 
 <p>More to come soon.&hellip;
 
