--- a/html/index2.html
+++ b/html/index2.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>My first styled page</title>
-  <link rel="stylesheet" href="style.css">
-</head>
+  <head>
+    <title>My first styled page</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
 
-<body>
+  <body>
 
-<!-- Site navigation menu -->
-<ul class="navbar">
-  <li><a href="index2.html">Home page</a>
-  <li><a href="respics.html">Hiking pictures</a>
-  <li><a href="Pubs2.html">Publications</a>
-  <li><a href="Contact.html">Contact</a>
-</ul>
+    <!-- Site navigation menu -->
+    <ul class="navbar">
+      <li><a href="index2.html">Home page</a>
+      <li><a href="respics.html">Hiking pictures</a>
+      <li><a href="Pubs2.html">Publications</a>
+      <li><a href="Contact.html">Contact</a>
+    </ul>
 
-<!-- Main content -->
-<h1>Tiffany Rae Duhl</h1>
+    <!-- Main content -->
+    <h1>Tiffany Rae Duhl</h1>
   <style type="text/css">
-  
-  </style>
-<p>Welcome to Tiff's page!
 
-<p>I'm a gardener, atmospheric scientist, and world traveler who's learning to build websites
+  </style>
+    <p>Welcome to Tiff's page!
+
+    <p>I'm a gardener, atmospheric scientist, and world traveler who's learning to build websites
 
     <p>To the left, you'll find links to my <strong>publications</strong>, <strong>hiking pictures</strong>, and <strong>contact</strong> information.;
 
-<p>More to come soon.&hellip;
+    <p>More to come soon.&hellip;
 
-<address>Created 21 October 2013<br>
-  by myself.</address>
+    <address>Created 21 October 2013</address>
 
-</body>
+  </body>
 </html>
