--- a/week2/html/Contact.html
+++ b/week2/html/Contact.html
@@ -24,16 +24,16 @@
 
     </style>
 
-
-    <p> email: <strong>tiffanyduhl@hotmail.com</strong>
-
-
-    <p><!-- Facebook Badge START --><a href="https://www.facebook.com/tiffany.duhl" target="_TOP" title="Tiffany Rae Duhl"><img src="FBicon.png" style="border: 0px;" width="80" height="80" /a><!-- Facebook Badge END -->
+    <ul class="contact">
+      <li> <a href="https://www.facebook.com/tiffany.duhl" target="_TOP" title="Tiffany Rae Duhl"><img src="images/FBicon.png" style="border: 0px;" width="80" height="80"></a>
+      <li><img class="nopad" src="images/envelope.jpg" style="border: 0px;" width="120" height="80">
 
         </div>
         <div id="footer">
     <address>Created 21 October 2013</address>
         </div>
       </div>
+    <script src="lib/jquery-1.10.2.js"></script>
+    <script src="lib/email.js"></script>
   </body>
 </html>
