--- a/html_week2/Contact.html
+++ b/html_week2/Contact.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>My first styled page</title>
-    <link rel="stylesheet" href="styles/style20.css">
+    <link rel="stylesheet" href="style2.css">
 
   </head>
 
