moved my address into a footer and created a wrapping container to keep the footer at the bottom of my Contacts page since there's not a lot of content

--- a/html/Contact.html
+++ b/html/Contact.html
@@ -7,7 +7,9 @@
   </head>
 
   <body>
-
+    <div id="wrapper">
+      <div id="header"></div>
+      <div id="content">
 <!-- Site navigation menu -->
     <ul class="navbar">
       <li><a href="index2.html">Home page</a>
@@ -28,7 +30,10 @@
 
     <p><!-- Facebook Badge START --><a href="https://www.facebook.com/tiffany.duhl" target="_TOP" title="Tiffany Rae Duhl"><img src="FBicon.png" style="border: 0px;" width="80" height="80" /a><!-- Facebook Badge END -->
 
+        </div>
+        <div id="footer">
     <address>Created 21 October 2013</address>
-
+        </div>
+      </div>
   </body>
 </html>
