--- a/html/respics.html
+++ b/html/respics.html
@@ -31,18 +31,14 @@
 
   </style>
 
-    <h2>Hiking in the Swiss Alps, May 2010</h2>
-    <img src="Swiss1.jpg" alt ="Hiking in the Swiss Alps, May 2010" width ="500" height ="700">
-    <p>
-    <img src="swiss3.jpg" alt="Hiking in the Swiss Alps, May 2010" width="550" height="500">
-    <p>
 
-    <h2>Hiking in Kauai, October 2011</h2>
-    <img src="kauai1.jpg" alt="Hiking in Kauai, October 2011" width="500" height="700">
-    <p>
-    <img src="kauai2.jpg" alt="Hiking in Kauai, October 2011" width="500" height="700">
-    <p>
-    <address>Created 21 October 2013</address>
-
+<div class="pikachoose">
+  <ul id="pikame" class="jcarousel-skin-pika">
+    <li><img src="images/kauai1.jpg" alt="Hiking in Kauai, October 2011"/><span>Hiking in Kauai, October 2011</span></li>
+    <li><img src="images/kauai2.jpg" alt="Hiking in Kauai, October 2011"/><span>Hiking in Kauai, October 2011</span></li>
+    <li><img src="images/swiss1.jpg" alt ="Hiking in the Swiss Alps, May 2010"/><span>Hiking in the Swiss Alps, May 2010</span></li>
+    <li><img src="images/swiss3.jpg" alt ="Hiking in the Swiss Alps, May 2010"/><span>Hiking in the Swiss Alps, May 2010</span></li>
+  </ul>
+</div>
   </body>
 </html>
